<resources>
    <string name="app_name">Box8-Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- LOGIN -->
    <string name="log_login"><font size="15">Login</font></string>
    <string name="log_signup"><font size="15">Signup</font></string>
    <string name="log_name"><font size="15">Name</font></string>
    <string name="log_last_name"><font size="15">Last Name</font></string>
    <string name="log_email"><font size="15">Email</font></string>
    <string name="log_email_phone"><font size="15">Email/Phone</font></string>
    <string name="log_phone"><font size="15">Phone</font></string>
    <string name="log_password"><font size="15">Password</font></string>

</resources>
