<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <!--<ImageView-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:src="@drawable/box8_logo"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:scaleType="fitCenter"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="30dp"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ll_sub_signup"
                android:visibility="gone">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/li_name"
                    android:visibility="visible"
                    android:hint="@string/log_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:background="@drawable/shape_curved_top"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/li_email"
                    android:visibility="visible"
                    android:background="@drawable/shape_curved_top"
                    android:hint="@string/log_email"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/li_phone_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_curved_top"
                    android:hint="@string/log_email_phone"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:visibility="visible"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/li_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_curved_top"
                    android:hint="@string/log_password"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:visibility="visible"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="textPassword" />

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/cbtn_login"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    app:spinning_bar_width="4dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="4dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_curved"
                    android:elevation="10dp"
                    android:text="@string/log_login"
                    android:textColor="#FFFFFF" />

                <!--<Button-->
                    <!--android:id="@+id/btn_login"-->
                    <!--android:layout_width="200dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--android:background="@drawable/shape_curved"-->
                    <!--android:elevation="10dp"-->
                    <!--android:text="@string/log_login"-->
                    <!--android:textColor="#FFFFFF" />-->
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>